# open_spiel_MOD

open_spiel/: .gitignore  BUILD.sh  README.txt  format_compilazione
open_spiel/MYpolicies/: VBR_like_v1.cpp  VBR_like_v1.h  VBR_like_v2.cpp  VBR_like_v2.h  eps_greedy.cpp  eps_greedy.h  generic_policy.h  main  prova.cpp
open_spiel/bandits/: VBR_Thompson_like.cpp  VBR_Thompson_like.h  VBR_like_v1.cpp  VBR_like_v1.h  VBR_like_v2.cpp  VBR_like_v2.h  VBR_like_v4.cpp  VBR_like_v4.h  eps_greedy.cpp  eps_greedy.h  generic_policy.h  pathfinding_helper.cpp  pathfinding_helper.h  state_abstraction_functions.cpp  state_abstraction_functions.h  utils.cpp  utils.h
open_spiel/open_spiel/: CMakeLists.txt
open_spiel/open_spiel/algorithms/: CMakeLists.txt  tabular_q_learning.cc  tabular_q_learning.h
open_spiel/open_spiel/examples/: CMakeLists.txt  COMPILE.sh  PLOT.sh  qlearn  shared_library_example  tabular_q_learning_example.cc
open_spiel/open_spiel/game_transforms/: CMakeLists.txt
open_spiel/open_spiel/games/: CMakeLists.txt  blackjack.cc  blackjack.h  pathfinding.cc  pathfinding.h  pig.cc  pig.h  tic_tac_toe.cc  tic_tac_toe.h
open_spiel/open_spiel/python/examples/: tic_tac_toe_qlearner.py
open_spiel/open_spiel/utils/: CMakeLists.txt
